--- a/index.html
+++ b/index.html
@@ -4,6 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Tilt+Warp:ital,wght@0,400&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Vite + React + TS</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Sofia+Sans+Extra+Condensed&display=swap"
@@ -12,7 +25,7 @@
     <style></style>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" style="height: 100vh"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
